升级配置